--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                     viewBox="0 0 24 24" stroke="currentColor">
                     <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4 6h16M4 12h16M4 18h16" />
                 </svg>
-                <img class="logo" src="assets/logo.svg" alt="logo">
+                <img class="logo">
                 <div class="menu-panel">
                     <svg class="close-menu" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
                         viewBox="0 0 24 24" stroke="currentColor">
