--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,7 @@
                 </svg>
                 <img class="logo">
                 <div class="menu-panel">
-                    <svg class="close-menu" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
-                        viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
-                            d="M6 18L18 6M6 6l12 12" />
-                    </svg>
+                    <div class="close-menu"></div>
                     <ul class="menu-ul">
                         <li>
                             <a href="#">Home</a>
